@@ -19,13 +19,13 @@ DIST ft2demos-2.5.4.tar.bz2 187225 SHA256 54621937130926235abe05ba08aeb390a98399
 DIST ft2demos-2.5.5.tar.bz2 182006 SHA256 b87c7deb5d9b1fddb8520c091a5491cc63ecac4de25139e1da38aebee82195ea SHA512 c6e1855f2315665e39a894ecfcb65f8546de435c1dada0ea0a6665a1e3ef22331d6949cd9261dfb6b68e653631d4c2e74f8ea31b53b40e46f44ab4dae38e368b WHIRLPOOL 55d6add5e3fac008a39231e3805e151a5a9b7cafb6ef970e546d96d3fa338a6a4a744aeb59ea04804312164aedd5e5a21e19773dbf5c42a1acfc42d283d90930
 EBUILD freetype-2.5.3-r1.ebuild 5324 SHA256 9238160476f32980772b6cf54004b8aa20f2f226e51faf959c04adf65223d33a SHA512 ac9d9e3048e78e59a45705b933d255fbdb52ec33bfc8e7ccc24bb6e8ec63871f50c4ecb93fe5c1dda6179375a1c0f34e2bfb3ae1fd2c97bcbd33e641aa11062e WHIRLPOOL 5e0a523f2f0e4c86db6846b9c99a24e6d250ce05f699101a2e4e6a2647b5c562e0822350f01870469f19d32e7d4122a3a9326a3fb26f57195cd711d4a3f000e3
 EBUILD freetype-2.5.4-r1.ebuild 5556 SHA256 266af78729d4de0c3c1850d911d9d0ef1453b2f337a957a7413e5ecb425a38cb SHA512 b90f20274deb8f67ceaea5f749df753fdc8bc71ee292184a5e3912398904e8db672fc9d053261d8d3756ac21f873a551fbee4ffafcd89484e2521d2b10481127 WHIRLPOOL fe2c0dae754c556dc96e23d30f5807727494bed09d08898541bbba705cec6b637d459d98e6205aff55948007591a751461ddb664fad3e4d61959d59cd7ed109d
-EBUILD freetype-2.5.5.ebuild 5547 SHA256 94e1631900db6bab8b916306fa821dc2141d20f7ed496541b3c44a1a927b6c90 SHA512 9941394c24baa4573ddc4a7727e64d6bf7a8fb3458869f37c7d60a09af800966a31d5852fe62184336b960114ca8f30179565e806691a96ab282b1298343d150 WHIRLPOOL 1456283922408988ef069873d0110b8bf052efd47b60ffd31925711dabdb1c09edae6afe5d78b24fa1097c0cb84a84606dc3ff289251ad942b455a5aec1e813b
-MISC ChangeLog 63150 SHA256 197a782ba2055d273e86570d1593e23e3841986f8d75c5d924fbbc094d96b092 SHA512 a0f6dcecf0927c571b353bff24f85fe8304119f621e5b0d1e09654f4cc978c0d189331e81e4ff456e1371b0cadea704f8d280a85670ff6f110df3d0c877c4e28 WHIRLPOOL 4313b932edb6b7f214943ad2db686ebde88a07e83882ca3b99cefd6f7f1e31932423cd08a31d3c18dd2feec028ed9921585fec46725c067d72da9b0bd05b0300
+EBUILD freetype-2.5.5.ebuild 5537 SHA256 11cab748bc0090410364b857394ce3484ef19857b1ea0a6e7ada8bc1a44fd9e3 SHA512 7e335f02ae6eaa56a80ddd2405dc94c2d9078de061c81fe20baa9a904c809beb8bbb4811460fb33127c42d8b4eaab1377376ee19351315d70820401385a5ef4c WHIRLPOOL 7c5d0afa484b8c9c7b422e5e24fe088063db7cb3cc53545b1da644b814a20aecdc0083c43f2200af7c3987a85774815d43cd3016fa8a73a45e59af23def1b6e7
+MISC ChangeLog 63254 SHA256 85c30d444abcd36b438a776b7e1ba016eb63c058beb3af65f34244c1024d4e0d SHA512 13d880bd75e91fa90dedcf8a303f8e25c8b93b42f47115ae13bd2779c39e09ba1543a7ddf8d9d4800f881d63a25c64c32e12deec81e0651d962642063cc3ace5 WHIRLPOOL 62c37fd9b7c2df23b1a680260283e37a56c11f3195e171683df80afbec1e28491051c1609cd1994cde2ade02c199bb1be468c0e11578ecdd3da7e6fa5604a235
 MISC metadata.xml 1400 SHA256 65a92662484be603be8adae907f727219ca78e4cb042350d2741c2fa03fde8a7 SHA512 e3052be471b660ff82261b8cf055a2ae20421d51c0ecdbc31a777aabab3708578012682e01b8b7d200cdd53bf980b4515de68196aac5711a2fd4a8799c1051a9 WHIRLPOOL 3bb9331dde6579280d3b673b62d6086f142a23210f40ab2c3a0cedfed39b067c5d2bf5eed3055f03071e650822723ce919d6a938ada5276c38d05265d71dc828
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTeWLAACgkQVWmRsqeSphOpGQCggDalD+qPDYRiyaczJt8wCm0O
-ucEAn05ILedVl1dbbGNValr7GALl1+9r
-=o/to
+iEYEAREIAAYFAlTeZcQACgkQVWmRsqeSphNhpgCcDZiL42tfBtlNgghMd3v8nf9X
+1usAni5k0EAWlJNk8iVcA2o3DIFSyJAV
+=3A/q
 -----END PGP SIGNATURE-----
