@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare
+DEPEND=fftw? ( sci-libs/fftw:3.0 ) ncurses? ( >=sys-libs/ncurses-5 ) ssl? ( dev-libs/openssl ) ncurses? ( virtual/pkgconfig )
+DESCRIPTION=http protocol ping-like program
+EAPI=5
+HOMEPAGE=http://www.vanheusden.com/httping/
+IUSE=debug fftw linguas_nl ncurses ssl tfo
+KEYWORDS=~amd64 ~hppa ~mips ~ppc ~ppc64 ~sparc ~x86
+LICENSE=GPL-2
+RDEPEND=fftw? ( sci-libs/fftw:3.0 ) ncurses? ( >=sys-libs/ncurses-5 ) ssl? ( dev-libs/openssl )
+RESTRICT=test
+SLOT=0
+SRC_URI=http://www.vanheusden.com/httping/httping-2.4.tgz
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=6bf2694c8076e391e23bfd329f2ae329
