@@ -3,13 +3,15 @@ Hash: SHA256
 
 AUX httping-2.2.1-flags.patch 161 SHA256 de8e10b5a001ae56bdaeb9137d45bf963346e6de564cfc32eb88022a4b45d845 SHA512 037f53e3f23247ddc5f33ef846bafe32e3f818242b92375d7145fa244c9a8aeeac2d3b1138cbffa792a9564a5e4e96274ff457a13be0c4b228033d47b21748d6 WHIRLPOOL 51224ecbe3f1e7c55ab89d0a4973270bb97dd51ad816156c084ddb8bfdb1dd2f61f96b9830d61f7150a47854eb30ce695d7ef24ad781e01301172bd44b148128
 DIST httping-2.3.4.tgz 53928 SHA256 a76171cb066b1d85a7b302f92dd3ee81d44ff1756ca6de5ade195eb07a836bc2 SHA512 680139d907a49b0a7b13904af8437331168e0b3cf838c3443b81b82cb36204d238a7497a7456bb3d39e0ae79fd0b0425f789f6ef72d1a1ec17bdb987e0afa148 WHIRLPOOL 335debd9e6767abc51379e2fd378633db42c919138f69a5571d44acc97f9c5bea5cf852e87aa62387a9ac4876058b048838a78db4be7adfc7c3c4d0309d260b4
+DIST httping-2.4.tgz 54170 SHA256 dab59f02b08bfbbc978c005bb16d2db6fe21e1fc841fde96af3d497ddfc82084 SHA512 11d9e9e3b222548c9754cc0e7bf947f1a55ccc9f1a2401681f95d21b7b7a56c07665955b558a56d07a5c98497ea3644758e4f85006c42fda2134556be8d9e804 WHIRLPOOL eb1318094eb22aa2186421f04c26c4e980a41ba901a3bf80ab50e036417d3cf241bdef26a397b6e6f337cf48fdf3e19627cde82ef6b0ed4c6e3525d1c13a0cf6
 EBUILD httping-2.3.4.ebuild 1229 SHA256 b47317b9a66d73eccfdc1c2e477e2a148bce4f9f1bf8bcf1d0ec31d630e5af6b SHA512 98f39d0bdbaf6bd6bf66cbc9732be44fc0cb6091ab924fd99fe74ee4bca25853f43ab90018102ab9d149b462898335de744eab640c1be9740aab554a5727a4b2 WHIRLPOOL 8ba72b64623c97394bd83bb21b1004ea3658c2cd18d7f8f8b7718db0ca64c051ba82781788b487979c04f05dcfa78486b32825528c70839bb9e3d1c50684b6be
-MISC ChangeLog 15246 SHA256 98edf0bd55e354d1290f3276de84e247e509b462d6dc5b0a1a942cd7f51781e4 SHA512 d836bed10f8ec506b4b6d0cf6ea70b2fce12a91affe796a5d5e6becf255006f060c4b73af8adeffdc5e8a4faa2effe1159994fbfa63580409bff396e16667eed WHIRLPOOL c4daa3159e49805407a089d0df1bf7e03bfb81f7c25eeda8fa5bd40377d1f3775f827f7b542e7aebdb287af6fed71a4a38c9b512a583648f2a0b22d10d071447
+EBUILD httping-2.4.ebuild 1465 SHA256 7337d31501b0a78163ca4d1ca7df8d5ffbc25c6bfee6f2980f5ecf1318c5133e SHA512 f23af149febe938f4ffa79fe300a6d2b1f95522541f2156c99a6c2f6bc3b1f224abc51859598feb99729fafdc66ac46df4091e9fb5c71023e8c64ae0565ddd0a WHIRLPOOL a280cada6079b4d6c6abe15093ae34c3546fbc0dd9686c6de19602d1893245f455f703f59d5cc9b8d5cb796ec590817c34caa4947ac769f67b3741c378fabb4a
+MISC ChangeLog 15359 SHA256 0bb97dfa15269ed02202670119eff10788c9dbdc77b72969e307a0ea71733fdd SHA512 316a084189b18b0430e3c20d98cd25567b47326a38f0d6e6d81fa2cb656922e01e084c7368172d3368ee19534fc401cd109c204fd7855caa68a7b7f81625f38f WHIRLPOOL d68128ab8b3ef98f4029803b7bb600e7cae054cfae1990695b327569f563b672eb30cfe0f7749efec1e1bb8ad609e8885ac80c2c92664d21058b5e3c3b9ea8db
 MISC metadata.xml 229 SHA256 bac702da2eadc933a602245b251cba8621cb903739245ef1de3ba32deac0ca20 SHA512 ba0c05c9884517f166325367e5ede29b29b770f006d4ef804008df0a4f6bb59ff73ee59a6b13a85fd2f3fb070c2c25b7ce896fdda2e978770640becb692442a4 WHIRLPOOL 0e37622329981203106c6379836d2846d4c1e757988d9fba5bfff414cff4df81e3c5bf32b3fe5933ac26c71e503e994d5393b3e6aaae4abde275fd9d19a3cafe
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlNvrEAACgkQVWmRsqeSphNgEACfe/MY9Rb+Gc4Njmymo23CzIEd
-7k8AnAzT1d0VQYPFxh60ekqNUBPgbVIU
-=dqhx
+iEYEAREIAAYFAlTeZEEACgkQVWmRsqeSphNpDACfRL6IstoXZSvzc1GOYqNqMDFq
+vdMAnRvse1ScLZHmmI1eoHro/1J0JqR9
+=jnV9
 -----END PGP SIGNATURE-----
