@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST loop-AES-v3.7b.tar.bz2 334227 SHA256 b6794ca655c8a0b9ac47814264d96d7dab588493e3d2c09357eaad1e3436d648 SHA512 f673d8ccb9b3072256ff3501785204f1d64af5211eabaf47b5d3dc6c42e3d7ad6a2e4bcddcad76ee903637097a8aa4e1df9e16fff345af2ecd6e105b32bf35d3 WHIRLPOOL 1d4aeda49fbdfb404d8377bb87572a8a2cf18859917188916c00951829b834c9ec475615adf6f587a4bdda63888fdbee8f91ae0161c1ecba755488292a4d72df
+DIST loop-AES-v3.7c.tar.bz2 334719 SHA256 2c4eb21afc6e45d99d17e4c26b084d1f1e45c0453da9092a6a95ef918c588173 SHA512 8b260cfe7864973714ddae37ea7231fdefa98ce104f5bee4a1157653a5dd36a89328ee97f3d76d59e1824468f59e46873acd7e5cf9083b73ef0a3b74c24d6bdb WHIRLPOOL 20d07e5f07a158118dcd022f14dff2144c41c51e9add1c747545b7ae8742dd617705e37b03a39262d9b8faed7550a2563f9d827549c487e31e06287b99d36825
 EBUILD loop-aes-3.7b.ebuild 2257 SHA256 9af0b025bbf8760a11a24a5b7f3dd129a4ee4edd0b1d34c9b4bdd9f519cc6ccc SHA512 42a6c92e4b7d99194a0435d1ab46822aeaff7828c42a135c89402246957be9f0dec6d08716bb3bf8f4cd9c736d373e1d992fb281420793c62309aab436928bbb WHIRLPOOL 5c5e5bef628c990531125d9fb738d673a8e805eb35b5f21539a7a0c9f378bac8197bce68e0cce6ff433e0dee547ccd996ebdecf2a2c9df291d167cfe3e34e4d2
-MISC ChangeLog 14367 SHA256 3a8e7a219615bf89366423b716036c5256e4583e7d722f330caec4a39bc72b40 SHA512 be1107d295f508ce6af6da74828f8aab822211615ab9579bfe5d5476c535bf24fd7d30549f01fcc59f5d0bdfdf5c7096e9a8154e692043aaea5609420a8c2b9c WHIRLPOOL bb28e06a9605722711c7bbbcd555e4ca9611638a8cab2cabffe7a09a05d4fe3f467ec5f90f1028f3f38cbee598d8621e5611b06e3d9ba41c7b1cbc994e32578c
+EBUILD loop-aes-3.7c.ebuild 2260 SHA256 2da7d92fcd0a7b7b88cd7d8cd3bd6c7193b68d259be4c672eb33dd4d60ccb68d SHA512 5f3649717b7b0364c3c2ab6402d6ce0c40575d63af03e5403b6fde56840fa7ddc6cbc41b0ddfafc6d76bf22bbdcb1a3d7704c1fc7c12afd6bff19fb67241e576 WHIRLPOOL dd4e2941059bf79930e7b355f66f6563403a51408a8e1bfb3c5b00165ef89d0dd3f4311914a0fdf7bc087d017b7535319f3fe2ac3ba62dbadb8078719c56b2d9
+MISC ChangeLog 14484 SHA256 09cf6740292c186e377d31f234300021000627c1e2f5b12acfbb0d23df7370ce SHA512 1fd6d12622c7dd427f30a411a8465edd71f6106794a8c8668c1c1f79866d415dab298aa55320a0bb4f78540aa02c179dd4f6ec5c14ebf6cc70c825689ae9a9df WHIRLPOOL c15c08500de2f1acf29b72ee15311c5077692e0e69ed5719dca6905c10ef409b226bddcc31436c75b5ff62a1319caf0c864066b88c61bc91d2872a8e288ca13e
 MISC metadata.xml 475 SHA256 c57d79931d4bbcd713e95c3a15d07e29e603c2eb3a86905037a76cddce19c1e6 SHA512 22da38fbe14237b05430581da261a37f3ecbe62f5ac88611a53ae8f4e2406e4fc5d1239b04d6d7ec77074ebde9c84a1079e85336dbde23a651deeebd775cbac4 WHIRLPOOL ec3d9ae49e9f88456684e6fa1401fa953e63af6635688a6af789ec0eb73bb7a71fd9f46be2c556bef5e97d3756df85fa6999689c6549d9dff324b06b6dd698f8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlTONuwACgkQXYk9GL8g3FHJkwEAm+T+xg2zJq7dn0SSNI5Qc+vJ
-Rpn31Q9AdBxadTBinGgA/iIGMDd9xllwIp+ocvgIv+SofM284H/ILdDr2pnVbvgR
-=bJa1
+iF4EAREIAAYFAlTeYAYACgkQXYk9GL8g3FHP4AD/Wht9yIuoSvpwJKBUG0/u8K77
+7zPKfLVnAPMCY14qj4sA/jAzMrKmwKR3P3KowDDj2rE2vZ6nlFNYcEZOgqwwxWd5
+=iL6t
 -----END PGP SIGNATURE-----
