@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/httping
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/httping/ChangeLog,v 1.123 2014/05/11 16:58:39 jer Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/httping/ChangeLog,v 1.124 2015/02/13 20:53:19 jer Exp $
+
+*httping-2.4 (13 Feb 2015)
+
+  13 Feb 2015; Jeroen Roovers <jer@gentoo.org> +httping-2.4.ebuild:
+  Version bump.
 
   11 May 2014; Jeroen Roovers <jer@gentoo.org> -httping-2.3.3.ebuild:
   Old.
